Fix shadow on Safari

--- a/src/genomes/list/styles.css
+++ b/src/genomes/list/styles.css
@@ -27,7 +27,7 @@
 
 .wgsa-genome-list-item--selectable:hover *::after,
 .wgsa-genome-list-item--selectable:focus *::after {
-  background: linear-gradient(to right, rgba(0,0,0,0) 0%, rgb(238,238,238) 75%);
+  background: linear-gradient(to right, rgba(255,255,255,0) 0%, rgb(238,238,238) 75%);
 }
 
 .wgsa-genome-list-item {
